Update file index.html dengan ditambahkan baris baru

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>HALO DUNIA</h1>
         <p>File pertama saya</p>
+        <p>Saya sedang Belajar menggunakan Github</p>
     </body>
 </html>
