Menambahkan gambar ke Halo Dunia

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <h1>HALO DUNIA</h1>
+        <div><img src="rizki.jpeg" alt="Halo Dunia dari Git" style="width: 50%px;max-width:600px"></div>
         <p>File pertama saya</p>
         <p>Saya sedang Belajar menggunakan Github</p>
+
     </body>
 </html>
