Menambahkan gambar auva.jpg

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <div><img src="rizki.jpeg" alt="Halo Dunia dari Git" style="width: 50%px;max-width:600px"></div>
         <p>File pertama saya</p>
         <p>Saya sedang Belajar menggunakan Github</p>
-
+        <div><img src="auva.JPG" alt="Halo Git" style="width: 50%px;max-width:600px"></div>
     </body>
 </html>
