--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
  <title>Belajar HTML</title>
  <link rel="stylesheet" href="biru.css">
+        <meta charset="UTF-8">
     </head>
     <body>
         <h1>HALO DUNIA</h1>
